Fix question in hydra quiz and gap

--- a/src/sass/sections/_footer.scss
+++ b/src/sass/sections/_footer.scss
@@ -129,7 +129,11 @@
       width: 100%;
       flex-direction: column;
       align-items: center;
-      gap: 16px;
+      // gap: 16px;
+
+      > *:not(:first-of-type) {
+        margin-left: 16px;
+      }
 
       @media screen and (min-width: 375px) {
         min-width: 360px;
